<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NameThatBird v1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="record">Record</string>
    <string name="listen">Listen</string>
    <string name="title_activity_listen">NTBListen</string>
    <string name="t_select_species">Select a species</string>
    <string name="title_activity_audio_player">NTBAudioPlayer</string>
    <string name="select_package">Select Package</string>
    <string name="random">Random</string>
    <string name="call_type">Call Type</string>
    <string name="species">Species</string>
    <string name="location">Location</string>
    <string name="title_activity_select_species">NTB:SelectSpecies</string>
    <string name="select_species">Select Species</string>
    <string name="title_activity_annotate">NTB:Annotate</string>

</resources>