<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NTBMain" >

    <TextView
        android:id="@+id/t_selectPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/select_package"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/b_species"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_selectPackage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="onClick"
        android:text="@string/species" />

    <Button
        android:id="@+id/b_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_species"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/location" />

    <Button
        android:id="@+id/b_callType"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_location"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/call_type" />

    <Button
        android:id="@+id/b_random"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b_callType"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/random" />

</RelativeLayout>